Bug 77455 - TTY corruption on 'SIGQUIT', 'SIGABRT', 'SIGKILL', 'SIGSEGV' weston-launch
Summary: TTY corruption on 'SIGQUIT', 'SIGABRT', 'SIGKILL', 'SIGSEGV' weston-launch
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-14 22:53 UTC by Anu Reddy
Modified: 2014-05-06 21:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-04-14 22:53:39 UTC
When weston-launch receives any of kill signals in 'SIGQUIT', 'SIGABRT', 'SIGKILL', 'SIGSEGV' kills weston-launch. In this process, tty is corrupted and keyboard responds incorrectly. 

TTY does not corrupt when weston is captures these signals. This happens only with weston-launch.

Steps:
1. Execute  : $ weston-launch
2. On ssh, execute :  $ killall -SIGQUIT weston-launch
3. After killing weston-launch, observe tty is corrupted and VT switch doesn't work.
4. You can reset tty from ssh via :$ systemctl restart getty@tty<id>.service  


Software Stack
==============
Kernel: 3.13.6-200.fc20.x86_64
Systemd: 212 (rawhide)
wayland (HEAD) 1.4.91-0-g5e2cfd2
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) mesa-10.1-0-g4a86465
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-gc5c503c
weston (HEAD) 1.4.91-0-g79d5a6e
Comment 1 Kristian Høgsberg 2014-04-30 17:42:53 UTC
commit 9a14b8f4fa771368fc756bd1e49308dcf21ddd07
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Apr 30 10:40:39 2014 -0700

    launcher-util: Initialize kb_mode also when weston-launch sets up tty
    
    We need a valid kb_mode to restore to in case weston-launch dies and
    weston has to clean up the tty.  We don't get a chance to read out the
    kb mode before weston-launch changes it, but it's safe to assume that it's
    always K_UNICODE.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=77455


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.